# TpCompilador

./: .gitignore  ReadMe.txt
Compilador/: AccionesSintactico.cpp  CMakeLists.txt  Compilador.cpp  Compilador.sln  Compilador.vcxproj  TablaDeSimbolos.cpp  main.cpp  yylex.cpp
Compilador/Archivos/: programa.txt
Compilador/CasosDePrueba/: programa.txt  registroEventos
Compilador/GeneracionDeCodigoAssebler/: Assembler.cpp  Assembler.h  out_assembler.asm  out_assembler.txt
Compilador/GeneracionDeCodigoAssembler/: Assembler.cpp
Compilador/GeneracionDeCodigoIntermedio/: Intermediate_code.cpp  Intermediate_code.h  Terceto.cpp  Terceto.h  TercetoAbs.h  chekeosGeneracion.cpp  chekeosGeneracion.h
Compilador/Lexical_analyzer/: Lexical_analyzer.cpp  Lexical_analyzer.h  Lexical_analyzer_header.h  Semantic_actions.cpp  Semantic_actions.h
Compilador/Lexico/: A.cpp  A.h  AccionesSemanticas.cpp  AccionesSemanticas.h  Gramatica.y  Lexical_analyzer.cpp  Lexical_analyzer.h  Lexical_analyzer_header.h  Lexico.cpp  Lexico.h  Semantic_actions.cpp  Semantic_actions.h  TablaDeSimbolos.cpp  TablaDeSimbolos.h  a.cpp  yylex.cpp  yylex.h
Compilador/Output/: Logger.cpp  Logger.h  indexProgram.txt  out.txt  out_bugs.txt  out_errores
Compilador/RegistroEventos/: RegistroEventos.cpp  RegistroEventos.h
Compilador/Salida/: Logger.cpp  Logger.h  RegistroEventos.cpp  RegistroEventos.h  out.txt
Compilador/Sintactic_analyzer/: Gramatica.y  Sintactic_actions.cpp  Sintactic_actions.h  y.tab.cpp  y.tab.h
Compilador/Sintactico/: AccionesSintactico.cpp  AccionesSintactico.h  Gramatica.y  Sintactic_actions.cpp  Sintactic_actions.h  y.tab.c  y.tab.cpp  y.tab.cpp;  y.tab.h
Compilador/SymbolTable/: SymbolTable.cpp  SymbolTable.h  Symbol_table.cpp  Symbol_table.h
Compilador/TablaDeSimbolos/: TablaDeSimbolos.cpp  TablaDeSimbolos.h
Compilador/Testing/: bug_NA  bug_division_0  bug_division_0.txt  bug_recursion  bug_recursion.txt  bug_scope  bug_scope.txt  bug_shadowing  bug_test_1y2.txt  bug_test_intermediate_code_generation  bug_type_incompatibility  program.txt  test_program
src/Compilador/: Compilador.cbp  Compilador.sln  Compilador.vcxproj  Compilador.vcxproj.filters
